--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<p>This is the first file in my new Git Repo.</p>
 	<p>A new line in our file!</p>
 	<br/>
-	<div><img src="images/git_logo.png" alt="Powerd by Git" style="width:10%%;max-width:10%;"></div>
+	<div><img src="images/git_logo.png" alt="Powerd by Git" style="width:10%;max-width:10%;"></div>
 </center>
  
 </body>
