--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="css/bluestyle.css">
-</head>
-<body>
+<html lang="en">
+	<head>
+		<title>Hello World!</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		 
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> 
+		
+		<style>
+		 h1,h2,h3,h4,h5,h6 {font-family: Roboto, sans-serif;}
+		</style>
+ 	</head>
+	
+	<body class="w3-cyan">
+		<div class="w3-container w3-large ">
+			<center>
+				<h1><b>Hello world!<b></h1>
+				<div><img src="images/world.png" alt="Hello World from Space"
+				style="width:20%;max-width:20%;"></div>
+				<br/>	
+				<p>This is the first file in my new Git Repo.</p>
+				<p>A new line in our file!</p>
+				<br/>
+				<div><img src="images/git_logo.png" alt="Powerd by Git" style="width:10%;max-width:10%;"></div>
+			</center>
+		</div>	
+	</body>
+</html>
  
-<center>
-	<h1>Hello world!</h1>
-	<div><img src="images/world.png" alt="Hello World from Space"
-	style="width:20%;max-width:20%;"></div>
-	<p>This is the first file in my new Git Repo.</p>
-	<p>A new line in our file!</p>
-	<br/>
-	<div><img src="images/git_logo.png" alt="Powerd by Git" style="width:10%;max-width:10%;"></div>
-</center>
- 
-</body>
-</html> 
