--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 		
 		<style>
 		 h1,h2,h3,h4,h5,h6 {font-family: Roboto, sans-serif;}
+		text-bold {font-weight:bold;}
 		</style>
  	</head>
 	
 	<body class="w3-cyan">
 		<div class="w3-container w3-large ">
 			<center>
-				<h1><b>Hello world!<b></h1>
+				<h1 class="text-bold w3-pale-blue">Hello world!</h1>
 				<div><img src="images/world.png" alt="Hello World from Space"
 				style="width:20%;max-width:20%;"></div>
 				<br/>	
