--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
-
+		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> 
 		
 		<style>
 		 h1,h2,h3,h4,h5,h6 {font-family: Roboto, sans-serif;}
-		text-bold {font-weight:bold;}
 		</style>
  	</head>
 	
 	<body class="w3-cyan">
 		<div class="w3-container w3-large ">
 			<center>
-				<h1 class="text-bold w3-pale-blue">Hello world!</h1>
+				<h1 class="text-bold w3-text-lime"><big><b>Hello world!</b></big></h1>
 				<div><img src="images/world.png" alt="Hello World from Space"
 				style="width:20%;max-width:20%;"></div>
 				<br/>	
